tests/errors/tensor_sqrt_negative.experr
tensor sqrt: math domain error
